Add DVD details

--- a/menus/albumView.html
+++ b/menus/albumView.html
@@ -472,8 +472,21 @@
                     ],
                     dvdTracks:
                     [
-                        { title: "Test 1", playbackLength: "4:36", tags: [ 'first' ] },
-                        { title: "Test 2", playbackLength: "3:45", tags: [ 'rerelease' ] },
+                        { title: "Call Me Crazy", playbackLength: "4:36", tags: [ 'lyric' ], description: "A brand-new lyric video of 'Call Me Crazy', with video of the band playing the song in a music video-type format in the background." },
+                        { title: "2 Nights 2 Remember", playbackLength: "3:45", tags: [ 'rerelease', 'lyric' ], description: "A re-release of the 2 Nights 2 Remember lyric vid for the short version of the song previously featured on the Crush 40 YouTube channel." },
+                        { title: "One Of Those Days", playbackLength: "3:45", tags: [ 'partial-rerelease', 'lyric' ], description: "A re-release of the lyric video for this show. Interestingly however, it <i>has</i> been modified to remove the 'Rise Again' advertising text towards the end." },
+                        { title: "Watch Me Fly...", playbackLength: "3:45", tags: [ 'first', 'live' ], description: "A relatively low-quality camera video from Team A'Thrash of Crush 40's performance at JAPAN Game Music Festival II:RE. This is one of the very few videos to surface of the show." },
+                        { title: "Down & Dirty", playbackLength: "3:45", tags: [ 'first', 'live' ], description: "Previously unreleased video of the 2 Nights 2 Remember show. Interestingly this song cuts in <i>earlier</i> than it does on the 2 Nights 2 Remember CD, therefore providing a small bit of previously unreleased audio." },
+                        { title: "I Am... All Of Me", playbackLength: "3:45", tags: [ 'first', 'live' ], description: "Previously unreleased video of the 2 Nights 2 Remember show. This song <b>was not</b> on the 2 Nights 2 Remember CD at all - making the inclusion of this song <i>very</i> special as no official audio had been heard of it previously." },
+                        { title: "With Me", playbackLength: "3:45", tags: [ 'first', 'live' ], description: "Previously unreleased video of the 2 Nights 2 Remember show." },
+                        { title: "Live Life", playbackLength: "3:45", tags: [ 'first', 'live' ], description: "Previously unreleased video of the 2 Nights 2 Remember show." },
+                        { title: "Revvin' Up", playbackLength: "3:45", tags: [ 'first', 'live' ], description: "Previously unreleased video of the 2 Nights 2 Remember show. This clip ends slightly after the 2 Nights 2 Remember CD, allowing some of <i>Sonic Heroes</i> to bleed though, which was also not featured on the CD." },
+                        { title: "Sonic Youth", playbackLength: "3:45", tags: [ 'first', 'live' ], description: "Previously unreleased video of the 2 Nights 2 Remember show. However, the opening to the song is slightly different to the 2 Nights 2 Remember CD, as there is no guitar roaring away here like on the CD." },
+                        { title: "What I'm Made Of...", playbackLength: "3:45", tags: [ 'first', 'live' ], description: "Previously unreleased video of the 2 Nights 2 Remember show." },
+                        { title: "Open Your Heart", playbackLength: "3:45", tags: [ 'first', 'live' ], description: "Previously unreleased multi-camera video of Crush 40 performing at JGMF2013." },
+                        { title: "What I'm Made Of...", playbackLength: "3:45", tags: [ 'rerelease', 'live' ], description: "A re-release of the multi-camera video of \"What I'm Made Of...\" from JGMF2013. Their performance of Open Your Heart transitions straight into this." },
+                        { title: "His World", playbackLength: "3:45", tags: [ 'live' ], description: "A re-release of Guilty's multi-camera video of 'His World' from Japan 2012, with audio from 'LIVE!'." },
+                        { title: "Live & Learn", playbackLength: "3:45", tags: [ 'live' ], description: "A re-release of the multi-camera video of 'Live & Learn' from Japan 2011." }
                     ],
                     physicalBg: "../img/visuals/Background/Discography/LiveStuff.png",
                     discImg: "../img/content/discography/physical/2N2R/Disc.png",
