Add Driving Through Forever images

--- a/menus/albumView.html
+++ b/menus/albumView.html
@@ -489,21 +489,18 @@
                         { title: "Live & Learn", playbackLength: "3:45", tags: [ 'live' ], description: "A re-release of the multi-camera video of 'Live & Learn' from Japan 2011." }
                     ],
                     physicalBg: "../img/visuals/Background/Discography/LiveStuff.png",
-                    discImg: "../img/content/discography/physical/2N2R/Disc.png",
-                    sticker: "../img/content/discography/physical/2N2R/Sticker.jpg",
+                    discImg: "../img/content/discography/physical/Driving/Disc1.png",
                     physicalCover: 
                     {
-                        imgSrc: "../img/content/discography/2N2R.png",
-                        backgrounds: [ 
-                            { title: "Cut-out by Shoko Otsuka", link: "https://ameblo.jp/shokootsuka/entry-11858040940.html" },
-                            { title: "Cut-out by Shoko Otsuka", link: "https://ameblo.jp/shokootsuka/entry-11832475290.html" },
-                            { title: "Texture", link: "https://www.photos-public-domain.com/2011/11/29/light-brown-or-tan-paper-texture-with-flecks/" },
-                        ],
-                        fonts: [ { title: "BRIG", link: "https://www.behance.net/gallery/18876427/BRIG-free-typeface" } ]
+                        imgSrc: "../img/content/discography/DrivingThroughForever.jpg",
+                        fonts: [
+                            { title: "Korolev", link: "https://www.myfonts.com/fonts/device/korolev/compressed-alt-heavy/" },
+                            { title: "Acumin", link: "https://www.fontspring.com/fonts/adobe/acumin-pro/acumin-pro-semi-condensed-ultra-black" },
+                        ]
                     },
                     obiFront:
                     {
-                        imgSrc: "../img/content/discography/physical/2N2R/Obi.jpg",
+                        imgSrc: "../img/content/discography/physical/Driving/Obi.jpg",
                         rightTranslation: `
                             <p><i>To be filled in</i></p>
                         `,
@@ -516,19 +513,18 @@
                     },
                     physicalBack:
                     {
-                        imgSrc: "../img/content/discography/physical/2N2R/Back.jpg",
-                        backgrounds: [ { title: "Texture", link: "https://www.photos-public-domain.com/2011/11/29/light-brown-or-tan-paper-texture-with-flecks/" }, ],
-                        fonts: [ { title: "BRIG", link: "https://www.behance.net/gallery/18876427/BRIG-free-typeface" } ]
+                        imgSrc: "../img/content/discography/physical/Driving/Back.jpg",
+                        backgrounds: [ { title: "Photo by Rachel E.S.", link: "https://www.flickr.com/photos/redhotskull/28027914454/" }, ]
                     },
                     physicalTray:
                     {
-                        imgSrc: "../img/content/discography/physical/2N2R/Tray.jpg"
+                        imgSrc: "../img/content/discography/physical/Driving/Tray.jpg"
                     },
-                    bookletPageSourcePrefix: '../img/content/discography/physical/2N2R/',
+                    bookletPageSourcePrefix: '../img/content/discography/physical/Driving/',
                     bookletPageSourceExtension: '.jpg',
                     bookletPages:
                     [
-                        {}, {}, {}, {}, {}, {}, {}, {}, {}, {}, {}, {}, {}, {}, {}, {}, {}, {}, {}, {}
+                        {}, {}, {}, {}, {}, {}, {}, {}, {}, {}, {}, {}, {}, {}, {}, {}
                     ]
                 },
             }
