Add tab view for smaller screens

--- a/menus/albumView.html
+++ b/menus/albumView.html
@@ -530,7 +530,7 @@
             }
         </script>
     </head>
-    <body>
+    <body class="page descOpen">
         <div class="intro block">
             <h1 class="title">Super Sonic Songs</h1>
             <ul class="stats">
@@ -551,6 +551,13 @@
             <div class="liveNotice" id="liveNotice">
                 <p>This release uses audio from a live performance - visit the dedicated show page for more detailed info!</p>
             </div>
+        </div>
+
+        <div class="tabs block">
+            <ul class="tabSet">
+                <li class="tab" id="descriptionTab"><p>Description</p></li>
+                <li class="tab" id="tracksTab"><p>Tracks</p></li>
+            </ul>
         </div>
 
         <div class="description block">
