Add title fonts to album view section

--- a/menus/albumView.html
+++ b/menus/albumView.html
@@ -15,6 +15,8 @@
             var Albums = {
                 thrill: {
                     title: "Thrill Of The Feel",
+                    titleFont: "Impact",
+                    titleFontTransform: "uppercase",
                     description: `
                     <p>This is where it all began; the first album put out by the band themselves! <i>Thrill Of The Feel</i> is comprised of all the songs recorded by a full band in the video game EA Sports NASCAR Arcade.</p>
                     <p>This album is essentially a soundtrack for the video game - however, it only contains the songs with a full band performance, not everything Jun produced.</p>
@@ -101,6 +103,8 @@
                 },
                 crush40: {
                     title: "Crush 40",
+                    titleFont: "Dimentia",
+                    titleFontStyle: "italic",
                     description: `
                     <p>This album marks the first time the name "Crush 40" was used. Before this album the band was known as "Sons Of Angels", and they didn't go by any specific name in "Sonic Adventure" and "Sonic Adventure 2" (Just crediting the individual performers). 
                     <p>In theory, this album is just a western release of the Thrill Of The Feel album, but there's a little more to it. All of the vocal tracks from Thrill Of The Feel are included on this release, including Open Your Heart, which was a bonus track on Thrill Of The Feel. However, the instrumental tracks were not carried over from Thrill Of The Feel, and instead 3 other songs from the Sonic Adventure games were included.
@@ -128,7 +132,8 @@
                     discImg: "../img/content/discography/physical/Crush40/Disc.png",
                     physicalCover: 
                     {
-                        imgSrc: "../img/content/discography/Crush40.jpg"
+                        imgSrc: "../img/content/discography/Crush40.jpg",
+                        fonts: [ { title: "Dimentia", link: "http://www.identifont.com/show?546" } ]
                     },
                     physicalBack:
                     {
@@ -136,9 +141,7 @@
                     },
                     physicalTray:
                     {
-                        imgSrc: "../img/content/discography/physical/Crush40/Tray.jpg",
-                        backgrounds: [ { title: "A Test Background", link: "#abc"}],
-                        fonts: [ { title: "A Test Font", link: "#def"} ]
+                        imgSrc: "../img/content/discography/physical/Crush40/Tray.jpg"
                     },
                     bookletPageSourcePrefix: '../img/content/discography/physical/Crush40/',
                     bookletPageSourceExtension: '.jpg',
@@ -155,6 +158,7 @@
                 },
                 sss: {
                     title: "Super Sonic Songs",
+                    titleFont: "Bronzo",
                     description: `
                     <p>Super Sonic Songs is the first compilation album released by Crush 40.</p>
                     <p>It features a range of tracks from the band's ~10-year history at that point, and a few new tracks as well: A cover of Kenichi Tokoi's Un-gravitify, the vocal theme for "Sonic Riders: Zero Gravity", a cover of The Cult's Fire Woman, from their "Sonic Temple" album, and Is It You, a fully original song created for this release.</p>
@@ -227,6 +231,7 @@
                 },
                 riseagain: {
                     title: "Rise Again",
+                    titleFont: "Downcome",
                     description: `
                     <p>Rise Again is a compilation of the four singles released by Crush 40 throughout 2011 and 2012: "Song of Hope", "Sonic Youth", "One Of Those Days", "Rise Again".</p>
                     <p>The singles are featured on this EP in the order they were released - with "Song of Hope" being the first to "Rise Again" being the last to be released.</p>
@@ -283,6 +288,7 @@
                 },
                 live: {
                     title: "LIVE!",
+                    titleFont: "Stencil",
                     description: `
                     <p><i>Live!</i> is Crush 40's first live album. Crush 40 performed two gigs at Live Stage Guilty in Tokyo, Japan on March 29th, 2012, and March 30th, 2012, and both shows were professionally recorded in full for this album.</p>
                     <p>This was the very first time Crush 40 could be heard with a full band live outside of Japan, and all 24 songs performed at these shows were released, with the exception of a cover of Hardline's "Everything", which has not yet been released due to copyright concerns.</p>
@@ -365,6 +371,8 @@
                 },
                 twonights: {
                     title: "2 Nights 2 Remember",
+                    titleFont: "Brig",
+                    titleFontTransform: "lowercase",
                     description: `
                     <p>2 Nights 2 Remember is unique in that it is both a studio EP and a live album. The first four tracks on the album are brand-new studio songs created specifically for the EP, while the rest of the album features professionally-recorded audio of their 2 Nights 2 Remember live performance, with their inclusion allowing the length of this album to be closer to others.</p>
                     <p>The four new tracks: 2 Nights 2 Remember, Big Mouth, Light of the Day and Down & Dirty had been previously released in short versions, but this was their first proper release, and their intended final placement too. 2 Nights 2 Remember and Down & Dirty were both selected to be included in the live concert segment of the CD too.</p>
