Add ID support to "All Members" page

--- a/menus/allMembers.html
+++ b/menus/allMembers.html
@@ -27,7 +27,7 @@ var members = [
             { type: "show", name: "JGMF II:RE" },
             { type: "song", name: "Team Ultimate: Shadow" },
             { type: "song", name: "Green Light Ride" },
-            { type: "song", name: "Call Me Crazy" }
+            { type: "song", id: "cmc" }
         ]
     },
     { 
@@ -180,6 +180,7 @@ var members = [
 ];
         </script>
 
+        <script src="../js/songList.js"></script>
         <script src="js/allMembers.js"></script>
     </head>
     <body>
