Add ID loading to album view

--- a/menus/albumView.html
+++ b/menus/albumView.html
@@ -10,6 +10,7 @@
         <link href="css/albumView.css" rel="stylesheet">
 
         <script src="js/menuZoom.js"></script>
+        <script src="../js/songList.js"></script>
         <script src="js/albumView.js"></script>
         <script>
             var Albums = {
