Remove placeholder text

--- a/menus/albumView.html
+++ b/menus/albumView.html
@@ -578,24 +578,7 @@
             <h2 class="title dimentiaFont">Tracks</h2>
             <div class="tracksContents">
                 <h3 class="separator" id="cdIndicator">CD</h3>
-                <ol class="trackList" id="cdTrackList">
-                    <!--<li class="track">
-                        <div class="main">
-                            <h3 class="title">Fill It Up</h3>
-                            <p class="length">3:45</p>
-                        </div>
-                        <ul class="tags">
-                            <li class="tag tagFirst"><p>First Release</p></li>
-                            <li class="tag tagReRelease"><p>Rerelease</p></li>
-                            <li class="tag tagRemix"><p>Remix</p></li>
-                            <li class="tag tagInstrumental"><p>Instrumental</p></li>
-                            <li class="tag tagOriginal"><p>Original</p></li>
-                            <li class="tag tagLive"><p>Live Performance</p></li>
-                            <li class="tag tagCover"><p>Cover</p></li>
-                            <li class="tag tagNotC40"><p>Not Crush 40</p></li>
-                        </ul>
-                    </li>-->
-                </ol>
+                <ol class="trackList" id="cdTrackList"></ol>
                 <h3 class="separator" id="dvdIndicator">Bonus DVD</h3>
                 <ol class="trackList" id="dvdTrackList"></ol>
             </div>
@@ -609,33 +592,18 @@
 
             <div class="content" id="physicalContent">
                 <div class="cd">
-                    <img id="disc" class="cdImg" src="../img/content/discography/physical/SSS/CD.png" data-action='zoom'>
+                    <img id="disc" class="cdImg" data-action='zoom'>
                 </div>
 
                 <div class="coverings outerCoverings">
                     <div id="cover" class="imgDetails imgDetailsLeft">
                         <h3 class="title">Cover</h3>
-                        <img class="img" src="../img/content/discography/SuperSonicSongs.png" data-action='zoom'>
-                        <div class="facts">
-                            <!--<div class="fact">
-                                <img class="icon" src="../img/icons/background.svg">
-                                <h4 class="title">Background</h4>
-                                <a class="contents" href="#"><p>From library 'XYZ'</p></a>
-                            </div>
-                            <div class="fact">
-                                <img class="icon" src="../img/icons/font.svg">
-                                <h4 class="title">Fonts</h4>
-                                <ul class="contents contentsList">
-                                    <li>Font A</li>
-                                    <li>Font B</li>
-                                    <li>Font C</li>
-                                </ul>
-                            </div>-->
-                        </div>
+                        <img class="img" data-action='zoom'>
+                        <div class="facts"></div>
                     </div>
                     <div id="back" class="imgDetails imgDetailsRight">
                         <h3 class="title">Back</h3>
-                        <img class="img" src="../img/content/discography/physical/SSS/Back.jpg" data-action='zoom'>
+                        <img class="img" data-action='zoom'>
                         <div class="facts"></div>
                     </div>
                 </div>
@@ -658,18 +626,18 @@
                             </div>
                         </div>
                     </div>
-                    <img class="img" src="../img/content/discography/physical/SSS/Obi.png" data-action='zoom'>
+                    <img class="img" data-action='zoom'>
                 </div>
 
                 <div id="sticker" class="coverings sticker">
                     <h3 class="title">Sticker</h3>
-                    <img class="img coverImg" src="../img/Placeholder.png" data-action='zoom'>
+                    <img class="img coverImg" data-action='zoom'>
                 </div>
 
                 <div id="tray" class="coverings tray">
                     <div class="imgDetails imgDetailsRight">
                         <h3 class="title">Tray</h3>
-                        <img id="tray" class="img coverImg" src="../img/content/discography/physical/SSS/Tray.jpg" data-action='zoom'>
+                        <img id="tray" class="img coverImg" data-action='zoom'>
                         <div class="facts"></div>
                     </div>
                 </div>
@@ -692,7 +660,7 @@
                             </div>
                         </div>
                     </div>
-                    <img class="img" id="obiImg" src="../img/content/discography/physical/SSS/Obi.png" data-action='zoom'>
+                    <img class="img" id="obiImg" data-action='zoom'>
                 </div>
 
                 <div class="booklet">
@@ -701,7 +669,7 @@
                     <div class="explore">
                         <button id="bookletNavLeft" class="navLeft" title="Navigate Left"><img src="../img/icons/largeLeftArrow.svg" alt="Left Arrow"></button>
                         <div class="content" id="booklet">
-                            <img class="img" src="../img/content/discography/SuperSonicSongs.png" data-action='zoom'>
+                            <img class="img" data-action='zoom'>
                             <div class="facts"></div>
                         </div>
                         <button id="bookletNavRight" class="navRight" title="Navigate Right"><img src="../img/icons/largeRightArrow.svg" alt="Right Arrow"></button>
