--- a/menus/albumView.html
+++ b/menus/albumView.html
@@ -499,6 +499,7 @@
                     ],
                     physicalBg: "../img/visuals/Background/Discography/LiveStuff.png",
                     discImg: "../img/content/discography/physical/Driving/Disc1.png",
+                    dvdImg: "../img/content/discography/physical/Driving/Disc2.png",
                     physicalCover: 
                     {
                         imgSrc: "../img/content/discography/DrivingThroughForever.jpg",
@@ -541,19 +542,19 @@
     </head>
     <body class="page descOpen">
         <div class="intro block">
-            <h1 class="title">Super Sonic Songs</h1>
+            <h1 class="title"></h1>
             <ul class="stats">
                 <li class="stat statYear">
                     <p class="statTitle">Released</p>
-                    <p class="statVal">2003</p>
+                    <p class="statVal"></p>
                 </li>
                 <li class="stat statTrackCount">
                     <p class="statTitle">Tracks</p>
-                    <p class="statVal">23</p>
+                    <p class="statVal"></p>
                 </li>
                 <li class="stat statLength">
                     <p class="statTitle">Length</p>
-                    <p class="statVal">67:34</p>
+                    <p class="statVal"></p>
                 </li>
             </ul>
             <p id="starText"></p>
@@ -571,7 +572,7 @@
 
         <div class="description block">
             <h2 class="dimentiaFont">Description</h2>
-            <div class="text"><p>This is a description about this amazing album - it's so amazing because of reason A, B and C. So yeah!</p></div>
+            <div class="text"></div>
         </div>
 
         <div class="tracks block" id="trackList">
@@ -592,7 +593,8 @@
 
             <div class="content" id="physicalContent">
                 <div class="cd">
-                    <img id="disc" class="cdImg" data-action='zoom'>
+                    <img id="cd" class="cdImg" data-action='zoom'>
+                    <img id="dvd" class="dvdImg" data-action='zoom'>
                 </div>
 
                 <div class="coverings outerCoverings">
