Fix DTF background on album view

--- a/menus/albumView.html
+++ b/menus/albumView.html
@@ -497,7 +497,7 @@
                         { title: "His World", playbackLength: "3:45", tags: [ 'live' ], description: "A re-release of Guilty's multi-camera video of 'His World' from Japan 2012, with audio from 'LIVE!'." },
                         { title: "Live & Learn", playbackLength: "3:45", tags: [ 'live' ], description: "A re-release of the multi-camera video of 'Live & Learn' from Japan 2011." }
                     ],
-                    physicalBg: "../img/visuals/Background/Discography/LiveStuff.png",
+                    physicalBg: "../img/visuals/Background/Discography/DTF.jpg",
                     discImg: "../img/content/discography/physical/Driving/Disc1.png",
                     dvdImg: "../img/content/discography/physical/Driving/Disc2.png",
                     physicalCover: 
