Adjust navbar pages

--- a/base/bodyStart.html
+++ b/base/bodyStart.html
@@ -18,11 +18,7 @@
         </li>
         <li id="navGear">
             <div class="back"></div>
-            <p>Gear</p>
-        </li>
-        <li id="navMedia">
-            <div class="back"></div>
-            <p>Media</p>
+            <a href="gear.php"><p>Gear</p></a>
         </li>
         <li id="navShows">
             <div class="back"></div>
@@ -31,6 +27,10 @@
         <li id="navBranding">
             <div class="back"></div>
             <p>Branding</p>
+        </li>
+        <li id="navHistory">
+            <div class="back"></div>
+            <p>History</p>
         </li>
     </ul>
 </nav>
