memebers html id fix
yes

--- a/menus/allMembers.html
+++ b/menus/allMembers.html
@@ -26,7 +26,7 @@ var members = [
             { type: "show", name: "JGMF 2013" },
             { type: "show", name: "JGMF II:RE" },
             { type: "song", name: "Team Ultimate: Shadow" },
-            { type: "song", name: "Green Light Ride" },
+            { type: "song", id: "glr" },
             { type: "song", id: "cmc" }
         ]
     },
@@ -44,34 +44,34 @@ var members = [
             { type: "show", name: "JGMF 2013" },
             { type: "show", name: "JGMF II:RE" },
             { type: "show", name: "30th Symphony" },
-            { type: "song", name: "Live & Learn" },
-            { type: "song", name: "Sonic Heroes" },
-            { type: "song", name: "What I'm Made Of..." },
-            { type: "song", name: "I Am... All Of Me" },
-            { type: "song", name: "Never Turn Back" },
-            { type: "song", name: "All Hail Shadow" },
-            { type: "song", name: "His World" },
-            { type: "song", name: "Seven Rings In Hand" },
-            { type: "song", name: "Knight Of The Wind" },
-            { type: "song", name: "Fight The Knight" },
-            { type: "song", name: "Through The Fire" },
-            { type: "song", name: "With Me" },
-            { type: "song", name: "Live Life" },
-            { type: "song", name: "Un-gravitify" },
-            { type: "song", name: "Fire Woman" },
-            { type: "song", name: "Is It You" },
-            { type: "song", name: "Free" },
-            { type: "song", name: "Song of Hope" },
-            { type: "song", name: "Sonic Boom" },
-            { type: "song", name: "Sonic Youth" },
-            { type: "song", name: "One of Those Days" },
-            { type: "song", name: "Rise Again" },
-            { type: "song", name: "2 Nights 2 Remember" },
-            { type: "song", name: "Big Mouth" },
-            { type: "song", name: "Light of the Day" },
-            { type: "song", name: "Down & Dirty" },
-            { type: "song", name: "Green Light Ride" },
-            { type: "song", name: "Call Me Crazy" }
+            { type: "song", id: "lal" },
+            { type: "song", id: "sh" },
+            { type: "song", id: "wimo" },
+            { type: "song", id: "iam" },
+            { type: "song", id: "ntb" },
+            { type: "song", id: "ahs" },
+            { type: "song", id: "sw" },
+            { type: "song", id: "srih" },
+            { type: "song", id: "kotw" },
+            { type: "song", id: "ftk" },
+            { type: "song", id: "ttf" },
+            { type: "song", id: "wm" },
+            { type: "song", id: "ll" },
+            { type: "song", id: "ug" },
+            { type: "song", id: "fw" },
+            { type: "song", id: "iiy" },
+            { type: "song", id: "f" },
+            { type: "song", id: "soh" },
+            { type: "song", id: "sb" },
+            { type: "song", id: "sy" },
+            { type: "song", id: "ootd" },
+            { type: "song", id: "ra" },
+            { type: "song", id: "2n2r" },
+            { type: "song", id: "bm" },
+            { type: "song", id: "lotd" },
+            { type: "song", id: "dnd" },
+            { type: "song", id: "glr" },
+            { type: "song", id: "cmc" }
         ]
     },
     { 
@@ -84,17 +84,17 @@ var members = [
         works: [
             { type: "show", name: "Tokyo 2011" },
             { type: "show", name: "Tokyo 2012 (<i>Live!</i> CD)" },
-            { type: "song", name: "I Am... All of Me" },
-            { type: "song", name: "Never Turn Back" },
-            { type: "song", name: "All Hail Shadow" },
-            { type: "song", name: "His World" },
-            { type: "song", name: "Un-gravitify" },
-            { type: "song", name: "Seven Rings In Hand" },
-            { type: "song", name: "Fight The Knight" },
-            { type: "song", name: "Knight Of The Wind (Original Ver.)" },
-            { type: "song", name: "Is It You" },
-            { type: "song", name: "Fire Woman" },
-            { type: "song", name: "Sonic Boom" }
+            { type: "song", id: "iam" },
+            { type: "song", id: "ntb" },
+            { type: "song", id: "ahs" },
+            { type: "song", id: "hw" },
+            { type: "song", id: "ug" },
+            { type: "song", id: "srih" },
+            { type: "song", id: "ftk" },
+            { type: "song", id: "kotw" },
+            { type: "song", id: "iiy" },
+            { type: "song", id: "fw },
+            { type: "song", id: "sb" }
         ]
     },
     {
@@ -106,13 +106,13 @@ var members = [
         img: 'Katsuji.jpg',
         works: [
             { type: "show", name: "Tokyo 2014 (<i>2N2R</i> CD)" },
-            { type: "song", name: "2 Nights 2 Remember" },
-            { type: "song", name: "Live & Learn" },
-            { type: "song", name: "What I'm Made Of..." },
-            { type: "song", name: "Sonic Heroes" },
-            { type: "song", name: "Free" },
-            { type: "song", name: "Knight Of The Wind (Final Ver.)" },
-            { type: "song", name: "Live Life" }
+            { type: "song", id: "2n2r" },
+            { type: "song", id: "lnl" },
+            { type: "song", id: "wimo" },
+            { type: "song", id: "sh" },
+            { type: "song", id: "f" },
+            { type: "song", id: "kotw" },
+            { type: "song", id: "ll" }
         ]
     },
 
@@ -125,8 +125,8 @@ var members = [
         img: 'Bobby.jpg',
         works: [
             { type: "song", name: "With Me" },
-            { type: "song", name: "With Me (Massive Power Mix)" },
-            { type: "song", name: "Through The Fire" }
+            { type: "song", id: "wm" },
+            { type: "song", id: "ttf" }
         ]
     },
     { 
@@ -136,7 +136,7 @@ var members = [
         `,
         img: 'Mark.jpg',
         works: [
-            { type: "song", name: "What I'm Made Of... (True Blue)" }
+            { type: "song", name: "wimo" }
         ]
     },
     { 
@@ -148,14 +148,14 @@ var members = [
         img: 'Naoto.jpg',
         works: [
             { type: "show", name: "Sonic Adventure Presentation" },
-            { type: "song", name: "Open Your Heart" },
-            { type: "song", name: "Dangerous Ground" },
-            { type: "song", name: "Into The Wind" },
-            { type: "song", name: "Revvin' Up" },
-            { type: "song", name: "Watch Me Fly..." },
-            { type: "song", name: "Fuel Me" },
-            { type: "song", name: "All The Way" },
-            { type: "song", name: "In The Lead" }
+            { type: "song", id: "oyh" },
+            { type: "song", id: "dg" },
+            { type: "song", id: "itw" },
+            { type: "song", id: "ru" },
+            { type: "song", id: "wmf" },
+            { type: "song", id: "fm" },
+            { type: "song", id: "atw" },
+            { type: "song", id: "itl" }
         ]
     },
     { 
@@ -167,14 +167,14 @@ var members = [
         img: 'Hirotsugu.jpg',
         works: [
             { type: "show", name: "Sonic Adventure Presentation" },
-            { type: "song", name: "Open Your Heart" },
-            { type: "song", name: "Dangerous Ground" },
-            { type: "song", name: "Into The Wind" },
-            { type: "song", name: "Revvin' Up" },
-            { type: "song", name: "Watch Me Fly..." },
-            { type: "song", name: "Fuel Me" },
-            { type: "song", name: "All The Way" },
-            { type: "song", name: "In The Lead" }
+            { type: "song", id: "oyh" },
+            { type: "song", id: "dg" },
+            { type: "song", id: "itw" },
+            { type: "song", id: "ru" },
+            { type: "song", id: "wmf" },
+            { type: "song", id: "fm" },
+            { type: "song", id: "atw" },
+            { type: "song", id: "itl" }
         ]
     },
 ];
