Improve song view

--- a/menus/songView.html
+++ b/menus/songView.html
@@ -30,15 +30,19 @@
         </div>
         <div class="lyrics block">
             <h2 class="dimentiaFont">Lyrics</h2>
-            <p>
-                Some lyrics of this song
-            </p>
+            <p class="source" id="lyricsSource">(Sourced from 2 Nights 2 Remember booklet)</p>
+            <div class="text" id="lyricsText">
+                <p>
+                    Some lyrics of this song
+                </p>
+            </div>
         </div>
         <div class="performances block">
             <h2 class="dimentiaFont">Performances</h2>
         </div>
-        <div class="lists block">
-            <h2 class="dimentiaFont">Lists</h2>
+        <div class="versions block">
+            <h2 class="dimentiaFont">Variants</h2>
+            <p>To be filled in</p>
         </div>
     </body>
 </html>
