Fix typo in All Members

--- a/menus/allMembers.html
+++ b/menus/allMembers.html
@@ -93,7 +93,7 @@ var members = [
             { type: "song", id: "ftk" },
             { type: "song", id: "kotw" },
             { type: "song", id: "iiy" },
-            { type: "song", id: "fw },
+            { type: "song", id: "fw" },
             { type: "song", id: "sb" }
         ]
     },
