Add alternate loading messages

--- a/base/bodyEnd.html
+++ b/base/bodyEnd.html
@@ -16,7 +16,7 @@
         </div>
 
         <div class="loading-screen">
-            <p><b>Revvin' Up</b> the engines!</p>
+            <p class="loading-text"><b>Revvin' Up</b> the engines!</p>
             <div class="spinning"></div>
         </div>
 
