Add zoom to all members images

--- a/menus/allMembers.html
+++ b/menus/allMembers.html
@@ -182,6 +182,7 @@ var members = [
 
         <script src="../js/songList.js"></script>
         <script src="js/allMembers.js"></script>
+        <script src="js/menuZoom.js"></script>
     </head>
     <body>
         <div class="fixedToCenter fixedLeft">
@@ -190,7 +191,7 @@ var members = [
 
         <div class="contents">
             <div class="img">
-                <img src="../img/Placeholder.png" alt="Member Image">
+                <img data-action='zoom' src="../img/Placeholder.png" alt="Member Image">
             </div>
     
             <div class="text">
