Add background to album view + Improve mobile

--- a/menus/albumView.html
+++ b/menus/albumView.html
@@ -570,7 +570,7 @@
             </ul>
         </div>
 
-        <div class="description block">
+        <div class="descriptionSection block">
             <h2 class="dimentiaFont">Description</h2>
             <div class="text"></div>
         </div>
